# TimeSeries-Analysis

./: Dockerfile  README.md  Spring2025_s3fs.API.ipynb  Spring2025_s3fs.API.md  Spring2025_s3fs.API.py  Spring2025_s3fs.example.ipynb  Spring2025_s3fs.example.md  Spring2025_s3fs.example.py  bitcoin_prices.csv  bitcoin_prices_with_forecast.csv  bitcoin_utils.py  fetch_bitcoin_data.py  requirements.txt  s3fs.example.ipynb  start.sh
Boilerplate files/: changelog.txt  invoke.yaml  pip_list.txt  repo_config.yaml  tasks.py
Data Preprocessing/: Fleet_Data_Inspection.ipynb  Initial_Data_Preparation.ipynb  Maintenance_Data.ipynb  Simulation_Data_Cleaning.ipynb
Data/Cleaned Data/: vehicle_data_final.csv  vehicle_data_with_predictions.csv  vehicle_info.csv  xgboost_cv_results.csv
devops/docker_build/: pyproject.toml
